cabal-version:      2.4
name:               hscheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maya
maintainer:         maya.omase@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

executable hscheme
    hs-source-dirs: src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Core Repl Reader Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, parsec, containers, haskeline, directory, vector, mtl, transformers
    hs-source-dirs:   app
    default-language: Haskell2010
